[package]
name = "server"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2.22", features = ["rt-core", "rt-threaded", "io-driver", "io-util", "net", "tcp", "time", "macros", "sync"] }
log = "0.4.11"
flexi_logger = "0.18.0"
rand = "0.7.3"
